src/test/resources/sdp/examples/should-pass/with-sessiont-info/minimal-expected.sdp
v=0
o=- 123 0 IN IP4 streaming.awesome.com
s=my session
i=Session info
