src/test/resources/sdp/examples/should-fail/bad-data/originator/bad-nettype/minimal.sdp
v=0
o=- 123 0 OUT IP4 streaming.awesome.com
s=my session
